Fixed the overlap issue between the date picker div and the date input fields.

--- a/src/SFA.DAS.ApprenticeApp.Pwa/NewUI/components/_ds-datepicker.scss
+++ b/src/SFA.DAS.ApprenticeApp.Pwa/NewUI/components/_ds-datepicker.scss
@@ -188,6 +188,11 @@ legend {
     &--open {
         display: block;
         left: 0;
+        margin-top: 15px;
+
+        @media (min-width: $breakpoint-medium) {
+            margin-top: 78px;
+        }
     }
     // --------------------------------------------------------
     // Header: flex row — nav groups flank the centred title
